--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bikcraft - Eletric bikes</title>
-    <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.">
+    <title>Bikcraft - Electric bicycles</title>
+    <meta name="description" content="High-quality, high-precision electric bicycles, tailor-made for you. Explore the world at your speed with Bikcraft.">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
