header and menu

--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
 </head>
 
 <body>
-
+    <header class="header-bg">
+        <div class="header">
+            <a href="./">
+                <img src="./assets/img/bikcraft.svg" alt="Bikcraft">
+            </a>
+            <ul class="header-menu">
+                <li> <a href="./bikes.html">Bikes</a></li>
+                <li> <a href="./insurance.html">Insurance</a></li>
+                <li> <a href="./contact.html"> Contact </a></li>
+            </ul>
+        </div>
+    </header>
 </body>
 
 </html>
