starting introduction - first commit

--- a/index.html
+++ b/index.html
@@ -17,12 +17,22 @@
                 <img src="./assets/img/bikcraft.svg" alt="Bikcraft">
             </a>
             <ul class="header-menu">
-                <li> <a href="./bikes.html">Bikes</a></li>
+                <li> <a href="./bikes.html">Bicycles</a></li>
                 <li> <a href="./insurance.html">Insurance</a></li>
                 <li> <a href="./contact.html"> Contact </a></li>
             </ul>
         </div>
     </header>
+    <main class="introduction-bg">
+        <div class="introduction">
+            <div class="introduction-content">
+                <h1> Tailor-made bicycles.</h1>
+                <p>High-quality, high-precision electric bicycles, tailor-made for you. Explore the world at your speed with Bikcraft.</p>
+                <a href="./bikes.html"> Escolha a sua </a>
+            </div>
+            <img src="./assets/img/fotos/introducao.jpg" alt="Black electric bicycle">
+        </div>
+    </main>
 </body>
 
 </html>
