--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
         <div class="introduction">
             <div class="introduction-content">
                 <h1> Tailor-made bicycles.</h1>
-                <p>High-quality, high-precision electric bicycles, tailor-made for you. Explore the world at your speed with Bikcraft.</p>
-                <a href="./bikes.html"> Escolha a sua </a>
+                <p>High-quality, high-precision electric bicycles, tailor-made for you. Explore the world at your speed with Bikcraft<span>.</span></p>
+                <a href="./bikes.html"> Choose yours </a>
             </div>
-            <img src="./assets/img/fotos/introducao.jpg" alt="Black electric bicycle">
+            <div>
+                <img src="./assets/img/fotos/introducao.jpg" alt="Black electric bicycle">
+            </div>
         </div>
     </main>
 </body>
