--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Bikcraft - Electric bicycles</title>
     <meta name="description" content="High-quality, high-precision electric bicycles, tailor-made for you. Explore the world at your speed with Bikcraft.">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -28,7 +31,7 @@
             <div class="introduction-content">
                 <h1> Tailor-made bicycles.</h1>
                 <p>High-quality, high-precision electric bicycles, tailor-made for you. Explore the world at your speed with Bikcraft<span>.</span></p>
-                <a href="./bikes.html"> Choose yours </a>
+                <a class="button" href="./bikes.html"> Choose yours </a>
             </div>
             <div>
                 <img src="./assets/img/fotos/introducao.jpg" alt="Black electric bicycle">
