--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <main class="introduction-bg">
         <div class="introduction">
             <div class="introduction-content">
-                <h1> Tailor-made bicycles.</h1>
-                <p>High-quality, high-precision electric bicycles, tailor-made for you. Explore the world at your speed with Bikcraft<span>.</span></p>
+                <h1 class="large-text color-0"> Tailor-made bicycles.</h1>
+                <p class="medium-text color-5">High-quality, high-precision electric bicycles, tailor-made for you. Explore the world at your speed with Bikcraft<span class="color-p1">.</span></p>
                 <a class="button" href="./bikes.html"> Choose yours </a>
             </div>
             <div>
