--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="./">
                 <img src="./assets/img/bikcraft.svg" alt="Bikcraft">
             </a>
-            <ul class="header-menu">
+            <ul class="header-menu font-1-m color-0">
                 <li> <a href="./bikes.html">Bicycles</a></li>
                 <li> <a href="./insurance.html">Insurance</a></li>
                 <li> <a href="./contact.html"> Contact </a></li>
@@ -29,8 +29,8 @@
     <main class="introduction-bg">
         <div class="introduction">
             <div class="introduction-content">
-                <h1 class="large-text color-0"> Tailor-made bicycles.</h1>
-                <p class="medium-text color-5">High-quality, high-precision electric bicycles, tailor-made for you. Explore the world at your speed with Bikcraft<span class="color-p1">.</span></p>
+                <h1 class="font-1-xxl color-0"> Tailor-made bicycles.</h1>
+                <p class="font-2-l color-5">High-quality, high-precision electric bicycles, tailor-made for you. Explore the world at your speed with Bikcraft<span class="color-p1">.</span></p>
                 <a class="button" href="./bikes.html"> Choose yours </a>
             </div>
             <div>
