--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header class="header-bg">
-        <div class="header">
+        <div class="header container">
             <a href="./">
                 <img src="./assets/img/bikcraft.svg" alt="Bikcraft">
             </a>
@@ -27,7 +27,7 @@
         </div>
     </header>
     <main class="introduction-bg">
-        <div class="introduction">
+        <div class="introduction container">
             <div class="introduction-content">
                 <h1 class="font-1-xxl color-0"> Tailor-made bicycles.</h1>
                 <p class="font-2-l color-5">High-quality, high-precision electric bicycles, tailor-made for you. Explore the world at your speed with Bikcraft<span class="color-p1">.</span></p>
@@ -38,6 +38,33 @@
             </div>
         </div>
     </main>
+
+    <article class="bike-list">
+        <h2 class="font-1-xxl container">escolha a sua <span class="color-p1">.</span></h2>
+        <ul class="bike-list-items">
+            <li>
+                <a href="./bikes/magic.html">
+                    <img src="./assets/img/bicicletas/magic-home.jpg" alt="Bicicleta preta">
+                    <h3 class="font-1-xl">Magic Might</h3>
+                    <span class="font-2-m color-8">R$ 2499</span>
+                </a>
+            </li>
+            <li>
+                <a href="./bikes/nimbus.html">
+                    <img src="./assets/img/bicicletas/nimbus-home.jpg" alt="Bicicleta preta">
+                    <h3 class="font-1-xl">Nimbus Stark</h3>
+                    <span class="font-2-m color-8">R$ 4499</span>
+                </a>
+            </li>
+            <li>
+                <a href="./bikes/nebula.html">
+                    <img src="./assets/img/bicicletas/nebula-home.jpg" alt="Bicicleta preta">
+                    <h3 class="font-1-xl">Nebula Cosmit</h3>
+                    <span class="font-2-m color-8">R$ 5499</span>
+                </a>
+            </li>
+        </ul>
+    </article>
 </body>
 
 </html>
