--- a/index.html
+++ b/index.html
@@ -65,6 +65,30 @@
             </li>
         </ul>
     </article>
+
+    <article class="tecnology-bg">
+        <div class="tecnology container">
+            <div class="tecnology-content">
+                <span class="font-2-l-b color-5"> Tecnlogia Avançada </span>
+                <h2 class="font-1-xxl color-0"> Você escolhe as suas cores e componentes <span class="color-p1">.</span></h2>
+                <p class="font-2-l color-5"> Cada Bikcraft é única e possui a sua identidade. As medias serão exatas para seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
+                <a class=" button link" href="./bikes.html"> Escolha um modelo </a>
+                <div>
+                    <img src="./assets/img/icones/eletrica.svg" alt="">
+                    <h3 class="font-1-m color-0"> Motor Elétrico </h3>
+                    <p class="font-2-s color-5"> Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
+                </div>
+                <div>
+                    <img src="./assets/img/icones/rastreador.svg" alt="">
+                    <h3 class="font-1-m color-0"> Rastreador </h3>
+                    <p class="font-2-s color-5"> Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
+                </div>
+            </div>
+            <div class="tecnology-img">
+                <img src="./assets/img/fotos/tecnologia.jpg" alt="">
+            </div>
+        </div>
+    </article>
 </body>
 
 </html>
